# ansi_colle-windows

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  bootstrap.ps1  galaxy.yml  pyproject.toml  requirements.yml  taskfile.dist.yml
.github/workflows/: ansible.yml  gh_pages.yaml
playbooks/: install.yml  site.yml
roles/base/defaults/: main.yml
roles/base/meta/: argument_specs.yml  main.yml
roles/base/tasks/: _firefox.yml  _regedit.yml  main.yml
roles/dev/files/: profile.ps1
roles/dev/tasks/: main.yml
roles/home/tasks/: main.yml
roles/scoop/defaults/: main.yml
roles/scoop/meta/: argument_specs.yml
roles/scoop/tasks/: main.yml
roles/winget/tasks/: main.yml
roles/wsl/defaults/: main.yml
roles/wsl/tasks/: main.yml
