[project]
name = "ansi_colle-windows"
version = "1.2.0"

description = "Namespace that stores Ansible collections."
readme = "README.md"

# pre-commit requires 3.13 version
requires-python = ">=3.13, <3.14"

dependencies = ["ansible>=12.0.0"]

[dependency-groups]
dev = [
  "ansible-dev-tools",
  "antsibull-docs>=2.21",
  "git-cliff>=2.10",
  "go-task-bin>=3.45",
  "pre-commit>=4.3",
  "ruff>=0.13",
  "validate-pyproject>=0.24",
]
